--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           </div>
 
           <div class="nav__logo">
-            <a href="#header" class="scroll-link">
-              <h2>PHONE</h2>
+            <a href="/" class="scroll-link">
+              PHONE
             </a>
           </div>
 
@@ -183,7 +183,7 @@
       <!-- Latest Products -->
       <section class="section latest__products" id="latest">
         <div class="title__container">
-          <div class="section__title filter-btn active" data-id="Latest Products">
+          <div class="section__title active" data-id="Latest Products">
             <span class="dot"></span>
             <h1 class="primary__title">Latest Products</h1>
           </div>
