--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
     <!-- Facility Section -->
     <section class="facility__section section" id="facility">
       <div class="container">
-        <div class="facility__contianer">
+        <div class="facility__contianer" data-aos="fade-up" data-aos-duration="1200">
           <div class="facility__box">
             <div class="facility-img__container">
               <svg>
@@ -964,7 +964,7 @@
 
     <!-- NewsLetter -->
     <section class="section newsletter" id="contact">
-      <div class="container">
+      <div class="container" >
         <div class="newsletter__content">
           <div class="newsletter__data">
             <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
@@ -984,7 +984,7 @@
 
   <!-- Footer -->
   <footer id="footer" class="section footer">
-    <div class="container">
+    <div class="container" >
       <div class="footer__top">
         <div class="footer-top__box">
           <h3>EXTRAS</h3>
