--- a/product.html
+++ b/product.html
@@ -115,25 +115,25 @@
             <div class="details__container--left">
               <div class="product__pictures">
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone1.jpeg" />
+                  <img src="./images/products/iPhone/iphone1.jpeg" id="pic1" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone2.jpeg" />
+                  <img src="./images/products/iPhone/iphone2.jpeg" id="pic2" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone3.jpeg" />
+                  <img src="./images/products/iPhone/iphone3.jpeg" id="pic3" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone4.jpeg" />
+                  <img src="./images/products/iPhone/iphone4.jpeg" id="pic4" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone5.jpeg" />
+                  <img src="./images/products/iPhone/iphone5.jpeg" id="pic5" />
                 </div>
               </div>
               <div class="product__picture" id="product__picture">
                 <!-- <div class="rect" id="rect"></div> -->
                 <div class="picture__container">
-                  <img src="./images/products/iPhone/iphone1.jpeg" id="picture" />
+                  <img src="./images/products/iPhone/iphone1.jpeg" id="pic" />
                 </div>
               </div>
               <div class="zoom" id="zoom"></div>
