--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 
   <!-- Carousel -->
-  <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css" />
-  <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css" />
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css
+">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <!-- Custom StyleSheet -->
@@ -964,7 +964,7 @@
 
     <!-- NewsLetter -->
     <section class="section newsletter" id="contact">
-      <div class="container" >
+      <div class="container">
         <div class="newsletter__content">
           <div class="newsletter__data">
             <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
@@ -984,7 +984,7 @@
 
   <!-- Footer -->
   <footer id="footer" class="section footer">
-    <div class="container" >
+    <div class="container">
       <div class="footer__top">
         <div class="footer-top__box">
           <h3>EXTRAS</h3>
@@ -1096,7 +1096,7 @@
 
 
   <!-- Glide Carousel Script -->
-  <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
 
   <!-- Animate On Scroll -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
