--- a/product.html
+++ b/product.html
@@ -117,19 +117,19 @@
             <div class="details__container--left">
               <div class="product__pictures">
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone1.jpeg" id="pic1" />
+                  <img class="picture" src="./images/products/iPhone/iphone1.jpeg" id="pic1" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone2.jpeg" id="pic2" />
+                  <img class="picture" src="./images/products/iPhone/iphone2.jpeg" id="pic2" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone3.jpeg" id="pic3" />
+                  <img class="picture" src="./images/products/iPhone/iphone3.jpeg" id="pic3" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone4.jpeg" id="pic4" />
+                  <img class="picture" src="./images/products/iPhone/iphone4.jpeg" id="pic4" />
                 </div>
                 <div class="pictures__container">
-                  <img src="./images/products/iPhone/iphone5.jpeg" id="pic5" />
+                  <img class="picture" src="./images/products/iPhone/iphone5.jpeg" id="pic5" />
                 </div>
               </div>
               <div class="product__picture" id="product__picture">
