:sparkles: update index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <div class="collection__data">
                 <span>New Colors Introduced</span>
                 <h1>HEADPHONES</h1>
-                <a href="#">SHOP NOW</a>
+                <a href="#shop">SHOP NOW</a>
               </div>
             </div>
           </div>
