:zap: improving index.html

--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                       <span>By Admin</span>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
                         provident rem sed minus natus unde vel modi!</p>
-                      <a href="#">Read More</a>
+                      <a href="#"><button>Read More</button></a>
                     </div>
                   </div>
                 </li>
@@ -908,7 +908,7 @@
                       <span>By Admin</span>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
                         provident rem sed minus natus unde vel modi!</p>
-                      <a href="#">Read More</a>
+                      <a href="#"><button>Read More</button></a>
                     </div>
                   </div>
                 </li>
@@ -922,7 +922,7 @@
                       <span>By Admin</span>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
                         provident rem sed minus natus unde vel modi!</p>
-                      <a href="#">Read More</a>
+                      <a href="#"><button>Read More</button></a>
                     </div>
                   </div>
                 </li>
@@ -936,7 +936,7 @@
                       <span>By Admin</span>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
                         provident rem sed minus natus unde vel modi!</p>
-                      <a href="#">Read More</a>
+                      <a href="#"><button>Read More</button></a>
                     </div>
                   </div>
                 </li>
@@ -950,7 +950,7 @@
                       <span>By Admin</span>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium, numquam non
                         provident rem sed minus natus unde vel modi!</p>
-                      <a href="#">Read More</a>
+                      <a href="#"><button>Read More</button></a>
                     </div>
                   </div>
                 </li>
