--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="styles.css" />
 
-  <title>Phone Shop</title>
+  <title>Uren Phone Shop</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 
           <div class="nav__logo">
             <a href="/" class="scroll-link">
-              PHONE
+              UREN PHONE
             </a>
           </div>
 
