--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css
 ">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="styles.css" />
@@ -980,85 +982,79 @@
 
   </main>
 
-  <!-- End Main -->
-
   <!-- Footer -->
-  <footer id="footer" class="section footer">
+<footer id="footer" class="footer">
+
     <div class="container">
-      <div class="footer__top">
-        <div class="footer-top__box">
-          <h3>EXTRAS</h3>
-          <a href="#">Brands</a>
-          <a href="#">Gift Certificates</a>
-          <a href="#">Affiliate</a>
-          <a href="#">Specials</a>
-          <a href="#">Site Map</a>
-        </div>
-        <div class="footer-top__box">
-          <h3>INFORMATION</h3>
-          <a href="#">About Us</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms & Conditions</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Site Map</a>
-        </div>
-        <div class="footer-top__box">
-          <h3>MY ACCOUNT</h3>
-          <a href="#">My Account</a>
-          <a href="#">Order History</a>
-          <a href="#">Wish List</a>
-          <a href="#">Newsletter</a>
-          <a href="#">Returns</a>
-        </div>
-        <div class="footer-top__box">
-          <h3>CONTACT US</h3>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-location"></use>
-              </svg>
-            </span>
-            42 Dream House, Dreammy street, 7131 Dreamville, USA
+      <div class="row gy-4">
+        <div class="col-lg-2 col-md-12 footer-info">
+          <a href="#" class="logo d-flex align-items-center">
+            <span>PHONE</span>
+          </a>
+          <p>Contact here</p>
+          <div class="social-links d-flex mt-4">
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-envelop"></use>
-              </svg>
-            </span>
-            company@gmail.com
-          </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-phone"></use>
-              </svg>
-            </span>
-            456-456-4512
-          </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-paperplane"></use>
-              </svg>
-            </span>
+        </div>
+
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>EXTRAS</h4>
+          <ul>
+            <li><a href="#">Brands</a></li>
+            <li><a href="#">Gift Certificates</a></li>
+            <li><a href="#">Affiliate</a></li>
+            <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Site Map</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>INFORMATION</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Site Map</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>My Account</h4>
+          <ul>
+            <li><a href="#">My Account</a></li>
+            <li><a href="#">Order History</a></li>
+            <li><a href="#">Wish List</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a href="#">Returns</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <h4>Contact Us</h4>
+          <p>
+            42 Dream House, Dreammy street, 7131 Dreamville, <br>USA
+            <br>
+            <strong>Phone:</strong> 456-456-4512<br>
+            <strong>Email:</strong> company@gmail.com<br>
             Dream City, USA
-          </div>
+          </p>
         </div>
       </div>
     </div>
-    <div class="footer__bottom">
-      <div class="footer-bottom__box">
 
+    <div class="container mt-4">
+      <div class="copyright">
+        &copy; Copyright <strong><span>PHONE</span></strong>. All Rights Reserved
       </div>
-      <div class="footer-bottom__box">
-
+      <div class="credits">
+        Contribute by <a href="https://www.linkedin.com/in/shakti12/">Shakti Singh</a>
       </div>
     </div>
-    </div>
+
   </footer>
-  <!-- End Footer -->
-
   <!-- PopUp -->
   <div class="popup hide__popup">
     <div class="popup__content">
